--- a/configs/docker/etc_systemd_system-docker.r2hdp.service
+++ b/configs/docker/etc_systemd_system-docker.r2hdp.service
@@ -7,6 +7,8 @@ After=syslog.target network.target
 Type=simple
 user=pi
 WorkingDirectory=/home/pi/wali_pi5/c3ws
+ExecStartPre=-/usr/bin/docker exec r2hdp stop
+ExecStartPre=-/usr/bin/docker rm r2hdp
 ExecStart=/bin/bash /home/pi/wali_pi5/configs/docker/start_docker_detached_r2hdp.sh
 
 [Install]
