--- a/configs/docker/etc_systemd_system-docker.r2hdp.service
+++ b/configs/docker/etc_systemd_system-docker.r2hdp.service
@@ -11,8 +11,8 @@ WorkingDirectory=/home/pi/wali_pi5/c3ws
 ExecStartPre=-/usr/bin/docker stop r2hdp
 # Remove the r2hdp container (if exists)
 ExecStartPre=-/usr/bin/docker rm r2hdp
-# Wait 30 seconds to allow life logging to start up at boot time
-ExecStartPre=/bin/sleep 30
+# Wait to allow life logging to start up at boot time
+ExecStartPre=/bin/sleep 60
 # Start r2hdp detached (which runs start_wali.sh)
 ExecStart=/bin/bash /home/pi/wali_pi5/configs/docker/start_docker_detached_r2hdp.sh
 
