--- a/c3ws/src/create3_navigation/config/slam.create3.yaml
+++ b/c3ws/src/create3_navigation/config/slam.create3.yaml
@@ -1,3 +1,4 @@
+# Modified for no-LIDAR Create3 SLAM
 slam_toolbox:
   ros__parameters:
 
@@ -19,9 +20,9 @@ slam_toolbox:
     debug_logging: false
     throttle_scans: 1
     transform_publish_period: 0.02 #if 0 never publishes odometry
-    map_update_interval: 5.0  # was 0.5
-    resolution: 0.01   # was 0.05
-    max_laser_range: 10.0 # YDLIDAR X4 max 10 - was 12.0 for rastering images
+    map_update_interval: 0.5
+    resolution: 0.05
+    max_laser_range: 0.4 # was 12.0 #for rastering images
     minimum_time_interval: 0.25
     transform_timeout: 0.2
     tf_buffer_duration: 30.
@@ -29,16 +30,16 @@ slam_toolbox:
     enable_interactive_mode: true
 
     # General Parameters
-    use_scan_matching: true
+    use_scan_matching: false # was true
     use_scan_barycenter: true
-    minimum_travel_distance: 0.1 # was 0.0
-    minimum_travel_heading: 0.1  # was 0.0
-    scan_buffer_size: 10  # was 20
-    scan_buffer_maximum_scan_distance: 10.0  # was 12.0
+    minimum_travel_distance: 0.0
+    minimum_travel_heading: 0.0
+    scan_buffer_size: 20
+    scan_buffer_maximum_scan_distance: 0.4 # was 12.0
     link_match_minimum_response_fine: 0.1
     link_scan_maximum_distance: 1.5
     loop_search_maximum_distance: 3.0
-    do_loop_closing: true
+    do_loop_closing: false  # was true
     loop_match_minimum_chain_size: 10
     loop_match_maximum_variance_coarse: 3.0
     loop_match_minimum_response_coarse: 0.35
