--- a/c3ws/src/create3_navigation/config/slam.yaml
+++ b/c3ws/src/create3_navigation/config/slam.yaml
@@ -17,7 +17,7 @@ slam_toolbox:
     scan_topic: scan
     mode: mapping
 
-    debug_logging: true  # was false
+    debug_logging: false
     throttle_scans: 1
     transform_publish_period: 0.02 #if 0 never publishes odometry
     map_update_interval: 0.5
@@ -30,38 +30,38 @@ slam_toolbox:
     enable_interactive_mode: true
 
     # General Parameters
-    use_scan_matching: true
+    use_scan_matching: false # was true
     use_scan_barycenter: true
     minimum_travel_distance: 0.0
     minimum_travel_heading: 0.0
     scan_buffer_size: 20
     scan_buffer_maximum_scan_distance: 0.4 # was 12.0
     link_match_minimum_response_fine: 0.1
-    link_scan_maximum_distance: 0.2 # was 1.5
-    loop_search_maximum_distance: 0.3 # was 3.0
-    do_loop_closing: true
+    link_scan_maximum_distance: 1.5
+    loop_search_maximum_distance: 3.0
+    do_loop_closing: false  # was true
     loop_match_minimum_chain_size: 10
-    loop_match_maximum_variance_coarse: 0.3 # was 3.0
-    loop_match_minimum_response_coarse: 0.035 # was 0.35
-    loop_match_minimum_response_fine: 0.045 # was 0.45
+    loop_match_maximum_variance_coarse: 3.0
+    loop_match_minimum_response_coarse: 0.35
+    loop_match_minimum_response_fine: 0.45
 
     # Correlation Parameters - Correlation Parameters
-    correlation_search_space_dimension: 0.5 # was 0.5
+    correlation_search_space_dimension: 0.5
     correlation_search_space_resolution: 0.01
     correlation_search_space_smear_deviation: 0.1
 
     # Correlation Parameters - Loop Closure Parameters
-    loop_search_space_dimension: 8.0 # was 8.0
+    loop_search_space_dimension: 8.0
     loop_search_space_resolution: 0.05
     loop_search_space_smear_deviation: 0.03
 
     # Scan Matcher Parameters
-    distance_variance_penalty: 0.01 # was 0.5
+    distance_variance_penalty: 0.5
     angle_variance_penalty: 1.0
 
     fine_search_angle_offset: 0.00349
     coarse_search_angle_offset: 0.349
     coarse_angle_resolution: 0.0349
     minimum_angle_penalty: 0.9
-    minimum_distance_penalty: 0.01 # was 0.5
+    minimum_distance_penalty: 0.5
     use_response_expansion: true
