--- a/c3ws/src/create3_navigation/config/nav2.tb4.yaml
+++ b/c3ws/src/create3_navigation/config/nav2.tb4.yaml
@@ -1,8 +1,6 @@
-# Modified for Create3 IR Sensor Only Navigation (No LIDAR)
-
 bt_navigator:
   ros__parameters:
-    use_sim_time: false # was True
+    use_sim_time: True
     global_frame: map
     robot_base_frame: base_link
     odom_topic: odom
@@ -62,15 +60,15 @@ bt_navigator:
 
 bt_navigator_navigate_through_poses_rclcpp_node:
   ros__parameters:
-    use_sim_time: False # was True
+    use_sim_time: True
 
 bt_navigator_navigate_to_pose_rclcpp_node:
   ros__parameters:
-    use_sim_time: False # was True
+    use_sim_time: True
 
 controller_server:
   ros__parameters:
-    use_sim_time: False # was True
+    use_sim_time: True
     controller_frequency: 20.0
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.5
@@ -146,12 +144,12 @@ local_costmap:
       publish_frequency: 2.0
       global_frame: odom
       robot_base_frame: base_link
-      use_sim_time: False # was True
+      use_sim_time: True
       rolling_window: true
       width: 3
       height: 3
       resolution: 0.06
-      robot_radius: 0.175  # actual 0.171
+      robot_radius: 0.175
       plugins: ["static_layer", "voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
@@ -173,9 +171,9 @@ local_costmap:
           clearing: True
           marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 0.4 # was 3.0
+          raytrace_max_range: 3.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 0.4 # was 2.5
+          obstacle_max_range: 2.5
           obstacle_min_range: 0.0
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
@@ -189,7 +187,7 @@ global_costmap:
       publish_frequency: 1.0
       global_frame: map
       robot_base_frame: base_link
-      use_sim_time: False # was True
+      use_sim_time: True
       robot_radius: 0.175
       resolution: 0.06
       track_unknown_space: true
@@ -204,9 +202,9 @@ global_costmap:
           clearing: True
           marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 0.4 # was 3.0
+          raytrace_max_range: 3.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 0.4 # was 2.5
+          obstacle_max_range: 2.5
           obstacle_min_range: 0.0
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
@@ -220,7 +218,7 @@ global_costmap:
 planner_server:
   ros__parameters:
     expected_planner_frequency: 20.0
-    use_sim_time: False # was True
+    use_sim_time: True
     planner_plugins: ["GridBased"]
     GridBased:
       plugin: "nav2_navfn_planner/NavfnPlanner"
@@ -230,7 +228,7 @@ planner_server:
 
 smoother_server:
   ros__parameters:
-    use_sim_time: False # was True
+    use_sim_time: True
     smoother_plugins: ["simple_smoother"]
     simple_smoother:
       plugin: "nav2_smoother::SimpleSmoother"
@@ -257,7 +255,7 @@ behavior_server:
     global_frame: odom
     robot_base_frame: base_link
     transform_tolerance: 0.1
-    use_sim_time: false # was true
+    use_sim_time: true
     simulate_ahead_time: 2.0
     max_rotational_vel: 1.0
     min_rotational_vel: 0.4
@@ -265,11 +263,11 @@ behavior_server:
 
 robot_state_publisher:
   ros__parameters:
-    use_sim_time: False # was True
+    use_sim_time: True
 
 waypoint_follower:
   ros__parameters:
-    use_sim_time: False # was True
+    use_sim_time: True
     loop_rate: 20
     stop_on_failure: false
     waypoint_task_executor_plugin: "wait_at_waypoint"
@@ -280,7 +278,7 @@ waypoint_follower:
 
 velocity_smoother:
   ros__parameters:
-    use_sim_time: False # was True
+    use_sim_time: True
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
