--- a/c3ws/src/create3_navigation/package.xml
+++ b/c3ws/src/create3_navigation/package.xml
@@ -13,6 +13,8 @@
   <depend>slam_toolbox</depend>
   <depend>nav2_bringup</depend>
   <depend>nav2_simple_commander</depend>
+  
+  <exec_depend>ros2launch</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
