--- a/c3ws/src/create3_navigation/config/nav2.yaml
+++ b/c3ws/src/create3_navigation/config/nav2.yaml
@@ -173,9 +173,9 @@ local_costmap:
           clearing: True
           marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 0.4 # was 3.0
+          raytrace_max_range: 3.0 # was 3.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 0.4 # was 2.5
+          obstacle_max_range: 2.5 # was 2.5
           obstacle_min_range: 0.0
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
@@ -204,9 +204,9 @@ global_costmap:
           clearing: True
           marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 0.4 # was 3.0
+          raytrace_max_range: 3.0 # was 3.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 0.4 # was 2.5
+          obstacle_max_range: 2.5 # was 2.5
           obstacle_min_range: 0.0
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
@@ -214,7 +214,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 4.0
-        inflation_radius: 0.45
+        inflation_radius: 0.2 # was 0.45
       always_send_full_costmap: True
 
 planner_server:
